data/derived/fa15/progs/unify/prog2097.ml.out
Characters 87-88:
  | h :: t -> assoc d k t
                    ^
Error: This expression has type 'a but an expression was expected of type
         'a * 'b * ('b * ('c -> 'd -> 'e)) list
       The type variable 'a occurs inside
       'a * 'b * ('b * ('c -> 'd -> 'e)) list
